syntax = "proto3";

package bread;

import "github.com/sr/operator/operator.proto";

option go_package = "breadpb";

// Interact with the JIRA ticket management software.
service Tickets {
	option (operator.enabled) = true;

	// List in-progress issues assigned to the current user
	rpc Mine(TicketRequest) returns (TicketResponse);
	// Show the state of all tickets in the current sprint
	rpc SprintStatus(TicketRequest) returns (TicketResponse);
}

message TicketResponse {
}

message TicketRequest {
	string include_resolved = 2;
}
